@@ -1,5 +1,7 @@
 2013-05-09  Glenn Morris  <rgm@gnu.org>
 
+	* tar-mode.el (tar-superior-buffer, tar-superior-descriptor): Add doc.
+
 	* bookmark.el (bookmark-search-delay):
 	* cus-start.el (vertical-centering-font-regexp):
 	* ps-mule.el (ps-mule-font-info-database-default):
